<resources>
    <string name="app_name">AgriSasa</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="default_notification_channel_name" translatable="true">com.devops.agrishop.default_notification_channel_name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="content_description_search">search</string>
    <string name="content_description_settings">settings</string>
    <string name="content_description_more">more</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="page_title">AgriSasa</string>
    <string name="bottom_nav_products">Products</string>
    <string name="bottom_nav_cart">Cart</string>
    <string name="bottom_nav_notif">Chat</string>
    <string name="bottom_nav_favorite">Favorite</string>
    <string name="bottom_nav_account">Account</string>

    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>

    <string name="web_client_id">810134352869-2s0rcdeib6ijrl86aj6jf4iipm8ltpni.apps.googleusercontent.com</string>
    <string name="dbnode_chatrooms">chatrooms</string>
    <string name="field_chatroom_messages">chatroom_messages</string>
    <string name="dialog_new_chatroom">NewChatroomDialog</string>
    <string name="dbnode_users">Users</string>
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="field_chatroom_id">chatroom_id</string>
    <string name="field_chatroom_name">chatroom_name</string>
    <string name="field_creator_id">creator_id</string>
    <string name="dialog_delete_chatroom">DeleteChatroomDialog</string>
    <string name="dialog_change_photo">ChangePhotoDialog</string>
    <string name="field_profile_image">profile_image</string>
    <string name="field_messaging_token">messaging_token</string>
    <string name="confirm">Confirm Password</string>
    <string name="dbnode_departments">departments</string>
    <string name="dialog_add_department">AddDepartmentDialog</string>
    <string name="data_type_admin_broadcast">data_type_admin_broadcast</string>
    <string name="dbnode_server">server</string>
    <string name="field_department">department</string>
    <string name="data_type">data_type</string>
    <string name="data_title">title</string>
    <string name="data_message">message</string>
    <string name="data_type_chat_message">data_type_chat_message</string>
    <string name="data_chatroom_id">chatroom_id</string>
    <string name="field_users">users</string>
    <string name="field_last_message_seen">last_message_seen</string>
    <string name="dialog_choose_delivery_method">Choose Delivery Method</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="request_mpesaexpress">Make Payment</string>
    <string name="close">Close</string>
    <string name="error_activity_not_found">Activity Not Found</string>

</resources>
